// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trae -> post makes a POST request to baseURL + path 1`] = `
Object {
  "Content-Type": "application/json",
}
`;

exports[`trae -> post makes a POST request to baseURL + path 2`] = `
Object {
  "config": Object {
    "body": "{\\"foo\\":\\"bar\\"}",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "POST",
    "post": Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
    },
    "url": "http://localhost:8080/api/foo",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "13",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> post post -> params makes a POST request to baseURL + path using a nested object as params 1`] = `
Object {
  "config": Object {
    "body": "{\\"sarasa\\":\\"request body\\"}",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "POST",
    "params": Object {
      "a": Object {
        "b": "c",
      },
    },
    "post": Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
    },
    "url": "http://localhost:8080/api/foo?a%5Bb%5D=c",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "13",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;

exports[`trae -> post post -> params makes a POST request to baseURL + path using params 1`] = `
Object {
  "config": Object {
    "body": "{\\"sarasa\\":\\"request body\\"}",
    "headers": Object {
      "Content-Type": "application/json",
    },
    "method": "POST",
    "params": Object {
      "foo": "bar",
      "key": 123,
      "token": "12345lkjhpor837",
    },
    "post": Object {
      "headers": Object {
        "Content-Type": "application/json",
      },
    },
    "url": "http://localhost:8080/api/foo?foo=bar&key=123&token=12345lkjhpor837",
  },
  "data": Object {
    "foo": "bar",
  },
  "headers": Headers {
    Symbol(map): Object {
      "Content-Length": Array [
        "13",
      ],
      "Content-Type": Array [
        "application/json",
      ],
    },
  },
  "status": 200,
  "statusText": "OK",
}
`;
